<hr>

<h3>News</h3>

<ul style="line-height:1.4em">
  <font size="2">
  <li>
	<font color=red>*new*</font>
	[01/2024]
	One paper (Textual Representation) is accepted to <a href="https://2024.eacl.org/">EACL 2024 Findings</a>.
 </li>
 <li>
	<font color=red>*new*</font>
	[11/2023]
	One paper (Video Topic Segmentation) is accepted to <a href="https://mmm2024.org/">Multimedia Modelling 2024</a>.
  </li>
 <li>
	[10/2023]
	One paper (Transcript Understanding) is accepted to <a href="https://bigdataieee.org/BigData2023/">IEEE BigData 2023</a>.
  </li>
 <li>	
	[10/2023]
	One paper (Image Captioining Metric) is accepted to <a href="https://2023.emnlp.org/">EMNLP 2023 Findings</a>.
  </li>
 <li>
	One paper (Moment Detection) is accepted to <a href="https://iccv2023.thecvf.com/">ICCV 2023</a>.
  </li>
 <li>
	[05/2023]
	One paper (Transcript Understanding) is accepted to <a href="https://www.interspeech2023.org/">Interspeech 2023</a>.
  </li>
 <li>
	[05/2023]
	Two papers (HighGEN, MeetingQA) are accepted to <a href="https://2023.aclweb.org/">ACL 2023</a>.
  </li>
 <li>
	[01/2023]
	One paper is accepted to <a href="https://2023.eacl.org/">EACL 2023</a>.
  </li>
</ul>

<a href="{{ site.baseurl }}/news.html">history</a>