@@ -66,6 +66,11 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
   <font size="2">
   <li>
 	<font color=red>*new*</font>
+	[02/2024]
+	One paper (Video Summary) is accepted to <a href="https://cvpr.thecvf.com/">CVPR 2024</a>.
+ </li>
+  <li>
+	<font color=red>*new*</font>
 	[01/2024]
 	One paper (Textual Representation) is accepted to <a href="https://2024.eacl.org/">EACL 2024 Findings</a>.
  </li>
@@ -80,7 +85,7 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
   </li>
  <li>	
 	[10/2023]
-	One paper (Image Captioining Metric) is accepted to <a href="https://2023.emnlp.org/">EMNLP 2023 Findings</a>.
+	One paper (Image Captioning Metric) is accepted to <a href="https://2023.emnlp.org/">EMNLP 2023 Findings</a>.
   </li>
  <li>
 	One paper (Moment Detection) is accepted to <a href="https://iccv2023.thecvf.com/">ICCV 2023</a>.
