@@ -6,6 +6,11 @@
   <font size="2">
   <li>
 	<font color=red>*new*</font>
+	[02/2024]
+	One paper (Video Summary) is accepted to <a href="https://cvpr.thecvf.com/">CVPR 2024</a>.
+ </li>
+  <li>
+	<font color=red>*new*</font>
 	[01/2024]
 	One paper (Textual Representation) is accepted to <a href="https://2024.eacl.org/">EACL 2024 Findings</a>.
  </li>
@@ -20,7 +25,7 @@
   </li>
  <li>	
 	[10/2023]
-	One paper (Image Captioining Metric) is accepted to <a href="https://2023.emnlp.org/">EMNLP 2023 Findings</a>.
+	One paper (Image Captioning Metric) is accepted to <a href="https://2023.emnlp.org/">EMNLP 2023 Findings</a>.
   </li>
  <li>
 	One paper (Moment Detection) is accepted to <a href="https://iccv2023.thecvf.com/">ICCV 2023</a>.
